# src/Modules/Auth/Routes.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { register, login, sendOTP, checkOTP, resetPassword } from './Auth.Controller.js';
+import { register, login, sendOTP, checkOTP, resetPassword, confirmResetPassword } from './Auth.Controller.js';
 
 const router = express.Router();
 
@@ -8,5 +8,6 @@ router.post('/login', login);
 router.post('/send-otp', sendOTP);
 router.post('/check-otp', checkOTP);
 router.post('/reset-password', resetPassword);
+router.post('/confirm-reset-password', confirmResetPassword); // Add the confirm reset password route
 
 export default router;
